--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Our Promise</span>
-              <span class="section-heading-lower">To You</span>
+              <span class="section-heading-upper">NUESTRA PROMESA</span>
+              <span class="section-heading-lower">PARA TI</span>
             </h2>
             <p class="mb-0">Cuando ingresa a nuestra tienda para comenzar el día, nos dedicamos a brindarle un servicio amable, un ambiente acogedor y, sobre todo, excelentes productos elaborados con ingredientes de la más alta calidad. Si no está satisfecho, háganoslo saber y haremos todo lo posible para hacer las cosas bien!</p>
           </div>
